# TCP_ServerAndClient_CXX

./: README.md
TCP_client/: CMakeLists.txt  ServerReadMe.md
TCP_client/src/: main.cpp
TCP_server/: CMakeLists.txt  ServerReadMe.md
TCP_server/src/: main.cpp
